force-app/main/default/objects/PurchaseOrder__c/fields/AdvanceAmount__c.field-meta.xml
<CustomField>
    <fullName>AdvanceAmount__c</fullName>
    <description>Advance Amount</description>
    <formula>ContractId__r.AdvanceAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>