force-app/main/default/objects/PurchaseOrder__c/fields/AdvanceDeposit__c.field-meta.xml
<CustomField>
    <fullName>AdvanceDeposit__c</fullName>
    <description>Advance Deposit</description>
    <formula>ContractId__r.AdvanceDeposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>