force-app/main/default/objects/PurchaseOrder__c/fields/AdvanceDepositEndDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceDepositEndDate__c</fullName>
    <description>Advance Deposit End Date</description>
    <formula>ContractId__r.AdvanceDepositEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Deposit End Date</label>
    <type>Date</type>
</CustomField>