force-app/main/default/objects/PurchaseOrder__c/fields/AdvanceDepositStartDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceDepositStartDate__c</fullName>
    <description>Advance Deposit Start Date</description>
    <formula>ContractId__r.AdvanceDepositStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Deposit Start Date</label>
    <type>Date</type>
</CustomField>