force-app/main/default/objects/PurchaseOrder__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>Approval Date</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>