force-app/main/default/objects/PurchaseOrder__c/fields/ApprovalRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestDate__c</fullName>
    <label>Approval Request Date</label>
    <type>Date</type>
</CustomField>