force-app/main/default/objects/PurchaseOrder__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <description>Cancellation Date</description>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>