force-app/main/default/objects/PurchaseOrder__c/fields/CancellationDetailReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationDetailReason__c</fullName>
    <description>Cancellation Detail Reason</description>
    <label>Cancellation Detail Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>