force-app/main/default/objects/PurchaseOrder__c/fields/ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>ChangeReason__c</fullName>
    <label>Change Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>