force-app/main/default/objects/PurchaseOrder__c/fields/ConfirmNetAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmNetAmount__c</fullName>
    <label>Confirm Net Amount</label>
    <summarizedField>PurchaseOrderLineItem__c.ConfirmNetAmount__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>