force-app/main/default/objects/PurchaseOrder__c/fields/ConfirmOrder__c.field-meta.xml
<CustomField>
    <fullName>ConfirmOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirm Order</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PurchaseOrder1</relationshipName>
    <type>Lookup</type>
</CustomField>