force-app/main/default/objects/PurchaseOrder__c/fields/ConfirmTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTaxAmount__c</fullName>
    <label>Confirm Tax Amount</label>
    <summarizedField>PurchaseOrderLineItem__c.ConfirmTaxAmount__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>