force-app/main/default/objects/PurchaseOrder__c/fields/ContractDeposit__c.field-meta.xml
<CustomField>
    <fullName>ContractDeposit__c</fullName>
    <description>Contract Deposit</description>
    <formula>ContractId__r.ContractDeposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>