force-app/main/default/objects/PurchaseOrder__c/fields/ContractDepositEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDepositEndDate__c</fullName>
    <description>Contract Deposit End Date</description>
    <formula>ContractId__r.ContractDepositEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Deposit End Date</label>
    <type>Date</type>
</CustomField>