force-app/main/default/objects/PurchaseOrder__c/fields/ContractDepositStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDepositStartDate__c</fullName>
    <description>Contract Deposit Start Date__c</description>
    <formula>ContractId__r.ContractDepositStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Deposit Start Date</label>
    <type>Date</type>
</CustomField>