force-app/main/default/objects/PurchaseOrder__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>ContractId</relationshipName>
    <type>Lookup</type>
</CustomField>