force-app/main/default/objects/PurchaseOrder__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <description>Contract Number</description>
    <formula>ContractId__r.ContractNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>