force-app/main/default/objects/PurchaseOrder__c/fields/ContractPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractPrice__c</fullName>
    <description>Contract Price(Include VAT)</description>
    <formula>ContractId__r.SalesPrice__c +  ContractId__r.VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Price(VAT Incl.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>