force-app/main/default/objects/PurchaseOrder__c/fields/DefectDeposit__c.field-meta.xml
<CustomField>
    <fullName>DefectDeposit__c</fullName>
    <description>Defect Deposit</description>
    <formula>ContractId__r.DefectDeposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>