force-app/main/default/objects/PurchaseOrder__c/fields/DefectDepositEndDate__c.field-meta.xml
<CustomField>
    <fullName>DefectDepositEndDate__c</fullName>
    <description>Defect Deposit End Date</description>
    <formula>ContractId__r.DefectDepositEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Deposit End Date</label>
    <type>Date</type>
</CustomField>