force-app/main/default/objects/PurchaseOrder__c/fields/DefectDepositStartDate__c.field-meta.xml
<CustomField>
    <fullName>DefectDepositStartDate__c</fullName>
    <description>Defect Deposit Start Date</description>
    <formula>ContractId__r.DefectDepositStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Deposit Start Date</label>
    <type>Date</type>
</CustomField>