force-app/main/default/objects/PurchaseOrder__c/fields/DeliveryCondition__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCondition__c</fullName>
    <description>Delivery Condition</description>
    <label>Delivery Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>