force-app/main/default/objects/PurchaseOrder__c/fields/DeliveryLocation__c.field-meta.xml
<CustomField>
    <fullName>DeliveryLocation__c</fullName>
    <label>DeliveryLocation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>