force-app/main/default/objects/PurchaseOrder__c/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <description>Delivery Method</description>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DeliveryMethod</fullName>
                <label>Delivery Method</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>