force-app/main/default/objects/PurchaseOrder__c/fields/DeliveryMethodDescription__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethodDescription__c</fullName>
    <label>Delivery Method Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>