force-app/main/default/objects/PurchaseOrder__c/fields/InspectionManager__c.field-meta.xml
<CustomField>
    <fullName>InspectionManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inspection Manager</description>
    <label>Inspection Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InspectionManager</relationshipName>
    <type>Lookup</type>
</CustomField>