force-app/main/default/objects/PurchaseOrder__c/fields/InspectionMethod__c.field-meta.xml
<CustomField>
    <fullName>InspectionMethod__c</fullName>
    <description>Inspection Method</description>
    <label>Inspection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OutsideInspection</fullName>
                <label>Outside Inspection</label>
            </value>
            <value>
                <fullName>PackageInspection</fullName>
                <label>Package Inspection</label>
            </value>
            <value>
                <fullName>TestCertificate</fullName>
                <label>Test Certificate</label>
            </value>
            <value>
                <fullName>QuantityInspection</fullName>
                <label>Quantity Inspection</label>
            </value>
            <value>
                <fullName>NoInspection</fullName>
                <label>No Inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>