force-app/main/default/objects/PurchaseOrder__c/fields/InventoryOutOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>InventoryOutOrderStatus__c</fullName>
    <label>Inventory Out Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Released</fullName>
                <default>true</default>
                <label>미출고</label>
            </value>
            <value>
                <fullName>Released</fullName>
                <label>출고</label>
            </value>
            <value>
                <fullName>Partial Released</fullName>
                <label>부분출고</label>
            </value>
            <value>
                <fullName>Cancel Released</fullName>
                <label>출고취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>