force-app/main/default/objects/PurchaseOrder__c/fields/IsBasicContract__c.field-meta.xml
<CustomField>
    <fullName>IsBasicContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Basic Contract</description>
    <label>Basic Contract</label>
    <type>Checkbox</type>
</CustomField>