force-app/main/default/objects/PurchaseOrder__c/fields/IsElectronicContract__c.field-meta.xml
<CustomField>
    <fullName>IsElectronicContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Electronic Contract</description>
    <label>Electronic Contract</label>
    <type>Checkbox</type>
</CustomField>