force-app/main/default/objects/PurchaseOrder__c/fields/IsStampDuty__c.field-meta.xml
<CustomField>
    <fullName>IsStampDuty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is StampDuty</description>
    <label>Stamp Duty</label>
    <type>Checkbox</type>
</CustomField>