force-app/main/default/objects/PurchaseOrder__c/fields/LiquidatedDamages__c.field-meta.xml
<CustomField>
    <fullName>LiquidatedDamages__c</fullName>
    <description>Liquidated Damages</description>
    <formula>ContractId__r.LiquidatedDamages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liquidated Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>