force-app/main/default/objects/PurchaseOrder__c/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <description>Order No</description>
    <displayFormat>PO{YYYY}{MM}{DD}{0000}</displayFormat>
    <label>Order No</label>
    <type>AutoNumber</type>
</CustomField>