force-app/main/default/objects/PurchaseOrder__c/fields/OrderPrice__c.field-meta.xml
<CustomField>
    <fullName>OrderPrice__c</fullName>
    <description>Order Price</description>
    <label>Order Price</label>
    <summarizedField>PurchaseOrderLineItem__c.TotalAmount__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>