force-app/main/default/objects/PurchaseOrder__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewOrder</fullName>
                <label>New Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>