force-app/main/default/objects/PurchaseOrder__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>Purchase_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>