force-app/main/default/objects/PurchaseOrder__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <description>Payment Condition</description>
    <label>Payment Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LC</fullName>
                <label>L/C</label>
            </value>
            <value>
                <fullName>DP</fullName>
                <label>D/P</label>
            </value>
            <value>
                <fullName>TT</fullName>
                <label>T/T</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>