force-app/main/default/objects/PurchaseOrder__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Payment Method</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PaymentMethod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>