force-app/main/default/objects/PurchaseOrder__c/fields/PaymentMethodDescription__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodDescription__c</fullName>
    <description>Payment Method Description</description>
    <label>Payment Method Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>