force-app/main/default/objects/PurchaseOrder__c/fields/PaymentPayCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentPayCondition__c</fullName>
    <label>Payment Pay Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>