force-app/main/default/objects/PurchaseOrder__c/fields/ProgressPaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>ProgressPaymentStatus__c</fullName>
    <label>Progress Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PaymentApprovalWait</fullName>
                <default>true</default>
                <label>PaymentApprovalWait</label>
            </value>
            <value>
                <fullName>PaymentPartiallyCompleted</fullName>
            </value>
            <value>
                <fullName>PaymentCancel</fullName>
            </value>
            <value>
                <fullName>PaymentCompleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>