force-app/main/default/objects/PurchaseOrder__c/fields/PurchasePlanId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Purchase Plan Id</description>
    <label>Purchase Plan</label>
    <referenceTo>PurchasePlan__c</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>RFXId</relationshipName>
    <type>Lookup</type>
</CustomField>