force-app/main/default/objects/PurchaseOrder__c/fields/PurchaseRequestId__c.field-meta.xml
<CustomField>
    <fullName>PurchaseRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Purchase Request Id</description>
    <label>Purchase Request</label>
    <referenceTo>PurchaseRequest__c</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>POPurchaseRequest</relationshipName>
    <type>Lookup</type>
</CustomField>