force-app/main/default/objects/PurchaseOrder__c/fields/ReceiptManager__c.field-meta.xml
<CustomField>
    <fullName>ReceiptManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReceiptManager</relationshipName>
    <type>Lookup</type>
</CustomField>