force-app/main/default/objects/PurchaseOrder__c/fields/SelectionCancelReason__c.field-meta.xml
<CustomField>
    <fullName>SelectionCancelReason__c</fullName>
    <description>Selection Cancel Reason</description>
    <label>Selection Cancellation Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>