force-app/main/default/objects/PurchaseOrder__c/fields/StampDutyPayRate__c.field-meta.xml
<CustomField>
    <fullName>StampDutyPayRate__c</fullName>
    <description>Stamp Duty Pa Rate</description>
    <label>Stamp Duty Payment Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer100</fullName>
                <label>Buyer 100%</label>
            </value>
            <value>
                <fullName>Supplier100</fullName>
                <label>Supplier 100%</label>
            </value>
            <value>
                <fullName>Buyer50Supplier50</fullName>
                <label>Buyer 50% Supplier 50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>