force-app/main/default/objects/PurchaseOrder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <default>true</default>
                <label>등록</label>
            </value>
            <value>
                <fullName>Determined</fullName>
                <label>확정</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <label>취소</label>
            </value>
            <value>
                <fullName>ChangeComplete</fullName>
                <isActive>false</isActive>
                <label>Change Complete</label>
            </value>
            <value>
                <fullName>ChangeRequest</fullName>
                <isActive>false</isActive>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>Completion</fullName>
                <isActive>false</isActive>
                <label>Completion</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>OrderReception</fullName>
                <isActive>false</isActive>
                <label>Order Reception</label>
            </value>
            <value>
                <fullName>PaymentApprovalWait</fullName>
                <isActive>false</isActive>
                <label>Payment Approval Wait</label>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
                <isActive>false</isActive>
                <label>Payment Completed</label>
            </value>
            <value>
                <fullName>PaymentPartiallyCompleted</fullName>
                <isActive>false</isActive>
                <label>Payment Partially Completed</label>
            </value>
            <value>
                <fullName>PaymentCompleted</fullName>
                <isActive>false</isActive>
                <label>PaymentCompleted</label>
            </value>
            <value>
                <fullName>PlaceOrder</fullName>
                <isActive>false</isActive>
                <label>Place Order</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>