force-app/main/default/objects/PurchaseOrder__c/fields/SupplierContact__c.field-meta.xml
<CustomField>
    <fullName>SupplierContact__c</fullName>
    <label>Supplier Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>