force-app/main/default/objects/PurchaseOrder__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <description>Tax Code</description>
    <label>Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PurchaseTaxInvoiceGeneral</fullName>
                <label>Purchase: TaxInvoice(General)</label>
            </value>
            <value>
                <fullName>PurchaseTaxInvoiceAsset</fullName>
                <label>Purchase: TaxInvoice(Asset)</label>
            </value>
            <value>
                <fullName>PurchaseTaxInvoiceExemption</fullName>
                <label>Purchase: TaxInvoice(Exemption)</label>
            </value>
            <value>
                <fullName>PurchaseTaxInvoiceBusiness</fullName>
                <label>Purchase: TaxInvoice(Business)</label>
            </value>
            <value>
                <fullName>PurchaseTaxInvoiceEtc</fullName>
                <label>Purchase: TaxInvoice(Etc)</label>
            </value>
            <value>
                <fullName>SalesTaxInvoiceGeneral</fullName>
                <label>Sales: TaxInvoice(General)</label>
            </value>
            <value>
                <fullName>SalesTaxInvoiceZeroRate</fullName>
                <label>Sales: TaxInvoice(ZeroRate)</label>
            </value>
            <value>
                <fullName>SalesBillGeneral</fullName>
                <label>Sales: Bill(General)</label>
            </value>
            <value>
                <fullName>SalesIssueExemption</fullName>
                <label>Sales: IssueExemption</label>
            </value>
            <value>
                <fullName>SalesSurtax</fullName>
                <label>Sales: Surtax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>