force-app/main/default/objects/PurchaseOrder__c/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <description>Termination Reason</description>
    <label>Termination Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>