force-app/main/default/objects/PurchaseOrder__c/fields/TotalApprovalCumulativeAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalApprovalCumulativeAmount__c</fullName>
    <description>Total Approval Cumulative Amount</description>
    <label>Total Approved Progress Amount</label>
    <summarizedField>PurchaseOrderLineItem__c.TotalCumulativeAmount__c</summarizedField>
    <summaryForeignKey>PurchaseOrderLineItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>